# ass-1/swagger_server/models/student.py
@@ -15,11 +15,11 @@ class Student(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, student_id: int=None, first_name: str=None, last_name: str=None, grade_records: List[GradeRecord]=None):  # noqa: E501
+    def __init__(self, id: str=None, first_name: str=None, last_name: str=None, grade_records: List[GradeRecord]=None):  # noqa: E501
         """Student - a model defined in Swagger
 
-        :param student_id: The student_id of this Student.  # noqa: E501
-        :type student_id: int
+        :param id: The id of this Student.  # noqa: E501
+        :type id: str
         :param first_name: The first_name of this Student.  # noqa: E501
         :type first_name: str
         :param last_name: The last_name of this Student.  # noqa: E501
@@ -28,19 +28,19 @@ class Student(Model):
         :type grade_records: List[GradeRecord]
         """
         self.swagger_types = {
-            'student_id': int,
+            'id': str,
             'first_name': str,
             'last_name': str,
             'grade_records': List[GradeRecord]
         }
 
         self.attribute_map = {
-            'student_id': 'student_id',
+            'id': '_id',
             'first_name': 'first_name',
             'last_name': 'last_name',
             'grade_records': 'gradeRecords'
         }
-        self._student_id = student_id
+        self._id = id
         self._first_name = first_name
         self._last_name = last_name
         self._grade_records = grade_records
@@ -57,25 +57,25 @@ class Student(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def student_id(self) -> int:
-        """Gets the student_id of this Student.
+    def id(self) -> str:
+        """Gets the id of this Student.
 
 
-        :return: The student_id of this Student.
-        :rtype: int
+        :return: The id of this Student.
+        :rtype: str
         """
-        return self._student_id
+        return self._id
 
-    @student_id.setter
-    def student_id(self, student_id: int):
-        """Sets the student_id of this Student.
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this Student.
 
 
-        :param student_id: The student_id of this Student.
-        :type student_id: int
+        :param id: The id of this Student.
+        :type id: str
         """
 
-        self._student_id = student_id
+        self._id = id
 
     @property
     def first_name(self) -> str:
